--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,31 @@ body {
   padding: 0;
   color: white;
 }
+
+ul {
+  list-style: none;
+  background-color: #383839;
+  text-align: center;
+  padding: 15px 0;
+  margin: 0;
+  box-shadow: 0px 4px 6px rgba(23, 23, 23, 0.1);
+}
+
+ul li {
+  display: inline-block;
+  margin: 0 20px;
+}
+
+ul li a {
+  text-decoration: none;
+  color: #fffcfc;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 10px 15px;
+  transition: color 0.3s;
+}
+
+ul li a:hover {
+  color: #05d9e8;
+  border-bottom: 2px solid #05d9e8;
+}
