--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ ul li a:hover {
 /* Email Link */
 .personal-info a {
   color: #05d9e8;
-  text-decoration: blink;
+  text-decoration: none;
   font-weight: bold;
 }
 
@@ -107,5 +107,22 @@ section {
   width: 75%;
   box-shadow: 0 8px 16px rgba(23, 23, 23, 0.1);
   border-radius: 12px;
+}
+
+
+.content li {
+  list-style: none;
+  padding-left: 25px; /* Adjusted for icon space */
+  position: relative;
+}
+
+.content li:before {
+  font-family: 'FontAwesome';
+  content: '\f061'; /* Unicode for 'arrow right' icon */
+  color: #05d9e8;
+  position: absolute;
+  left: 0;
+  font-size: 18px;
+  line-height: 1;
 }
 
