--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,8 @@ ul {
   text-align: center;
   padding: 15px 0;
   margin: 0;
-  box-shadow: 0px 4px 6px rgba(23, 23, 23, 0.1);
+  border-radius: 0.75em;
+  box-shadow: 0 0.5em 1em rgba(23, 23, 23, 0.1);
 }
 
 ul li {
@@ -36,7 +37,7 @@ ul li a {
 
 ul li a:hover {
   color: #05d9e8;
-  border-bottom: 2px solid #05d9e8;
+  border-bottom: 0.125em solid #05d9e8;
 }
 
 .personal-info {
@@ -44,7 +45,7 @@ ul li a:hover {
   margin: 10 auto;
   padding: 20px; 
   background: linear-gradient(135deg, #383839, #2c2b2c);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
+  box-shadow: 0 0.5em 1em rgba(23, 23, 23, 0.1); 
   border-radius: 15px;
   text-align: center; 
   position: relative;
@@ -53,7 +54,7 @@ ul li a:hover {
 
 .personal-info:hover {
   transform: scale(1.05); 
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4); 
+  box-shadow: 0 0.5em 1em rgba(23, 23, 23, 0.1); 
 }
 
 .personal-info h1 {
@@ -69,7 +70,6 @@ ul li a:hover {
   color: #ddd; 
 }
 
-/* Email Link */
 .personal-info a {
   color: #05d9e8;
   text-decoration: none;
@@ -81,11 +81,20 @@ ul li a:hover {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 3em;
   font-weight: 300;
   color: #05d9e8;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 2.5px;
+}
+
+h3{
+  font-size: 1.6em;
+  font-weight: 200;
+  margin-left: 0.5em;
+  color: white;
+  text-align: center;
+  margin-top: 2.5px;
 }
 
 section h2 {
@@ -102,8 +111,8 @@ p, ul li {
 
 section {
   background-color: rgb(48, 47, 47);
-  margin: 40px auto;
-  padding: 30px;
+  margin: 2.5em auto;
+  padding: 1.8em;
   width: 75%;
   box-shadow: 0 8px 16px rgba(23, 23, 23, 0.1);
   border-radius: 12px;
@@ -112,17 +121,31 @@ section {
 
 .content li {
   list-style: none;
-  padding-left: 25px; /* Adjusted for icon space */
+  padding-left: 1.5em; 
   position: relative;
 }
 
 .content li:before {
   font-family: 'FontAwesome';
-  content: '\f061'; /* Unicode for 'arrow right' icon */
+  content: '\f061'; 
   color: #05d9e8;
   position: absolute;
   left: 0;
-  font-size: 18px;
+  font-size: 1.2em;
   line-height: 1;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.5em;
+  margin-bottom: 1em;
+}
+
+video {
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.5em;
+  margin-bottom: 1em;
 }
 
