--- a/css/styles.css
+++ b/css/styles.css
@@ -149,3 +149,18 @@ video {
   margin-bottom: 1em;
 }
 
+.register {
+  display: inline-block;
+  background-color: #05d9e8;
+  color: white;
+  padding: 0.7em 0.15em;
+  font-size: 1rem;
+  text-align: center;
+  border-radius: 0.3em;
+  margin-top: 0.5em;
+  transition: background-color 0.3s ease;
+}
+
+.register:hover {
+  background-color: #03b9c6;
+}
