--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Material+Icons&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 body {
   background-image: url("../media/5065282.jpg");
@@ -87,7 +88,7 @@ h1 {
   margin-top: 2.5px;
 }
 
-h3{
+h3 {
   font-size: 1.6em;
   font-weight: 200;
   margin-left: 0.5em;
@@ -117,7 +118,6 @@ section {
   border-radius: 12px;
 }
 
-
 .content li {
   list-style: none;
   padding-left: 1.5em; 
@@ -125,8 +125,8 @@ section {
 }
 
 .content li:before {
-  font-family: 'FontAwesome';
-  content: '\f061'; 
+  font-family: 'Material Icons';
+  content: '\e5cc'; /* Change the icon by referencing Material Icons' code points */
   color: #05d9e8;
   position: absolute;
   left: 0;
